# Needed by Doc/Makefile.am
EXTRA_DIST = \
	analyze.m \
	bisect.m \
	chol2.m \
	cholmod2.m \
	cholmod_demo.m \
	cholmod_make.m \
	etree2.m \
	graph_demo.m \
	lchol.m \
	ldl_normest.m \
	ldlchol.m \
	ldlsolve.m \
	ldlsplit.m \
	ldlupdate.m \
	ldlrowmod.m \
	metis.m \
	mread.m \
	mwrite.m \
	nesdis.m \
	resymbol.m \
	sdmult.m \
	sparse2.m \
	spsym.m \
	symbfact2.m
